<resources>
    <string name="app_name">Liberty</string>
    <string name="str_name">Hello, <b>Alonze Lee</b></string>
    <string name="str_home_nav_name">Home</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_package">Package</string>
    <string name="str_tv_top_selling">Top Selling</string>
    <string name="str_gcert">GCERT (General science)- Akhram Sherasiya</string>
    <string name="str_subjects">51 Subjects</string>
    <string name="str_materials">570 Materials</string>
    <string name="str_video">570 Videos</string>
    <string name="str_tests">200 Tests</string>
    <string name="str_only">Only $2000/-</string>
    <string name="str_courses">Courses</string>
    <string name="str_allCourse">All Course</string>
    <string name="str_newest">Newest</string>
    <string name="str_popular">Popular</string>
    <string name="str_money">$2000/-</string>
    <string name="str_category">Category Wise Courses</string>
    <string name="str_paper_solution">GSCB Paper Solution</string>
    <string name="str_testimonial">Testimonial</string>
    <string name="src_tv_name_testimonial">Ravindar Mehta</string>
    <string name="str_tv_desc_testimonial">Ravindar Mehta Ravindar Mehta Ravindar Mehta Ravindar...</string>
    <string name="read_more">Read More</string>
    <string name="str_topper">Our Toppers</string>
    <string name="str_topperName">Divyang Patel</string>
    <string name="str_classic">GPSC Class 12</string>
    <string name="str_dailyQuiz">Test- 1315 GSCB Mix Test</string>
    <string name="str_questions">50 Questions</string>
    <string name="str_time">30 Minutes</string>
    <string name="start">Start</string>
    <string name="str_DailyQuizeName">Daily Quiz</string>
    <string name="str_log_in">Log In</string>
    <string name="str_mobile_number">Mobile Number</string>
    <string name="ed_mobile_number_hint">Enter Mobile Number</string>
    <string name="str_login">Login</string>
    <string name="str_or_don_t_have_an_account">or Don\'t have an account?</string>
    <string name="str_registration">Registration</string>
    <string name="str_password">Password</string>
    <string name="ed_password_hint">Enter Password</string>
    <string name="str_or">or</string>
    <string name="str_login_otp">Login Using OTP</string>
    <string name="str_checkbox_name">Keep me signed in</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_register_now">Register Now</string>
    <string name="str_advance">Advanced</string>
    <string name="data_not_found">Data Not Found</string>
</resources>