<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_back"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/tv_password"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_login"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/str_log_in"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_login" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/str_password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_password_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edittext_shape"
            android:hint="@string/ed_password_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chk_keepMeSignedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_checkbox_name"
        app:layout_constraintStart_toStartOf="@id/btn_login_password"
        app:layout_constraintTop_toBottomOf="@id/ed_password_ll" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_forgot_password"
        android:textColor="#324F80"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/chk_keepMeSignedIn"
        app:layout_constraintEnd_toEndOf="@id/btn_login_password"
        app:layout_constraintTop_toTopOf="@id/chk_keepMeSignedIn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_background_selected"
        android:text="@string/str_login"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/ed_password_ll" />

    <View
        android:layout_width="160dp"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tv_or"
        app:layout_constraintEnd_toStartOf="@id/tv_or"
        app:layout_constraintStart_toStartOf="@id/btn_login_with_otp"
        app:layout_constraintTop_toTopOf="@id/tv_or" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingVertical="10dp"
        android:text="@string/str_or"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_password" />

    <View
        android:layout_width="160dp"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tv_or"
        app:layout_constraintEnd_toEndOf="@id/btn_login_with_otp"
        app:layout_constraintStart_toEndOf="@id/tv_or"
        app:layout_constraintTop_toTopOf="@id/tv_or" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_with_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="11sp"
        android:background="@drawable/btn_registration_shape"
        android:text="@string/str_login_otp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_or" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_with_otp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_do_not_account_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/str_or_don_t_have_an_account"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_register_now"
            android:layout_marginStart="5dp"
            android:textColor="#324F80" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>