<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.authentication.loginactivity.LoginActivity">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_login"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/str_log_in"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_login" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/str_mobile_number"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edittext_shape"
            android:hint="@string/ed_mobile_number_hint"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_mobile_number"
            android:inputType="number" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/btn_background_selected"
            android:text="@string/str_login"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/ed_mobile_number" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_do_not_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:paddingVertical="10dp"
            android:text="@string/str_or_don_t_have_an_account"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login_number" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="11sp"
            android:background="@drawable/btn_registration_shape"
            android:text="@string/str_registration"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tv_do_not_account" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>